--- a/sem_5/django/ifnti_l3/ifnti/listes_eleves.tex
+++ b/sem_5/django/ifnti_l3/ifnti/listes_eleves.tex
@@ -41,7 +41,7 @@ IFNTI-Sokodé TOGO\\300 BP 40
 \textbf{Sexe} & \textbf{Date Naissance}\\ \hline
 \BLOCK{for elv in eleves}
 \VAR{elv.matricule} & \VAR{elv.nom} & \VAR{elv.prenom} &
-\VAR{elv.sexe} & \VAR{elv.dateNais}\\ \hline
+\VAR{elv.sexe} & \VAR{elv.date_naissance}\\ \hline
 \BLOCK{endfor}
 \end{longtable}
 \end{document}
