--- a/sem_5/django/ifnti_l3/ifnti/notes_template.tex
+++ b/sem_5/django/ifnti_l3/ifnti/notes_template.tex
@@ -16,10 +16,10 @@
 \usepackage{color}
 \usepackage[autolanguage,np]{numprint}
 \usepackage{longtable}
-\usepackage{phonenumbers}
-\usepackage{telprint}
 \graphicspath{ {\VAR{image_path}} }
+
 \begin{document}
+
 \begin{minipage}{12cm}
 \textsf{REGION CENTRALE} \\ \hspace{1cm}
 \end{minipage}
@@ -33,15 +33,16 @@ Travail-Liberté-Patrie
 IFNTI-Sokodé TOGO\\300 BP 40
 \end{center}
 \end{minipage}
+
 \begin{center}
-\underline{\textbf{LISTE DES ETUDIANTS}}
+\underline{\textbf{LISTE DES NOTES DE LA MATIÈRE : \VAR{matiere.nom}}}
 \end{center}
-\begin{longtable}{|l|l|l|l|l|} \hline
-\textbf{Matricule} & \textbf{Nom} & \textbf{Prénom} &
-\textbf{Sexe} & \textbf{Date Naissance}\\ \hline
-\BLOCK{for elv in eleves}
-\VAR{elv.matricule} & \VAR{elv.nom} & \VAR{elv.prenom} &
-\VAR{elv.sexe} & \VAR{elv.date_naissance}\\ \hline
+
+\begin{longtable}{|l|l|l|} \hline
+\textbf{Nom} & \textbf{Prénom} & \textbf{Note} \\ \hline
+\BLOCK{for note in notes}
+\VAR{note.eleve.nom} & \VAR{note.eleve.prenom} & \VAR{note.note} \\ \hline
 \BLOCK{endfor}
 \end{longtable}
+
 \end{document}
